// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`seed: correctly seeds data 1`] = `
Object {
  "House": Array [
    Object {
      "address": "irevaumi",
      "id": "3c6a84f5-da63-57df-8bc0-611398c5f6bd",
      "numberOfRooms": 127348283,
      "residents": Array [
        Object {
          "email": "ju",
          "id": "e13d34ca-0872-5019-9469-fb4d3a0f816e",
          "isActive": true,
          "name": "sezsi",
        },
      ],
    },
    Object {
      "address": "lavub",
      "id": "d0b09399-5dfe-5f66-9989-17958b9c7954",
      "numberOfRooms": -928052335,
      "residents": Array [],
    },
    Object {
      "address": "uze",
      "id": "e326250d-c6ad-52fc-8f56-865e43b3f5ee",
      "numberOfRooms": -56942030,
      "residents": Array [
        Object {
          "email": "junla",
          "id": "a0171dea-a8d6-5667-94b9-f5b98842fbbf",
          "isActive": false,
          "name": "kos",
        },
        Object {
          "email": "jocnuf",
          "id": "8763d7e2-a361-5ba2-ada9-52f4369cd413",
          "isActive": true,
          "name": "husefuw",
        },
        Object {
          "email": "wijug",
          "id": "993f7b9f-f9be-5d51-a8f8-eac3312d6bef",
          "isActive": false,
          "name": "fef",
        },
      ],
    },
  ],
  "Pet": Array [
    Object {
      "animal": "Dog",
      "birthday": 2019-10-10T18:26:07.269Z,
      "id": 1,
      "name": "gafgohrak",
      "toys": Array [],
    },
    Object {
      "animal": "Dog",
      "birthday": 2019-10-10T18:26:07.269Z,
      "id": 2,
      "name": "mabuj",
      "toys": Array [],
    },
    Object {
      "animal": "Cat",
      "birthday": 2019-10-10T18:26:07.269Z,
      "id": 3,
      "name": "taj",
      "toys": Array [],
    },
    Object {
      "animal": "Dog",
      "birthday": 2019-10-10T18:26:07.269Z,
      "id": 4,
      "name": "cuval",
      "toys": Array [],
    },
    Object {
      "animal": "Dog",
      "birthday": 2019-10-10T18:26:07.269Z,
      "id": 5,
      "name": "unukaho",
      "toys": Array [],
    },
    Object {
      "animal": "Cat",
      "birthday": 2019-10-10T18:26:07.269Z,
      "id": 6,
      "name": "tibawha",
      "toys": Array [],
    },
  ],
  "Toy": Array [
    Object {
      "id": "a1e86c42-d617-4de9-bae3-d1cd4790c659",
      "name": "ofosid",
      "price": -97579029233.664,
    },
    Object {
      "id": "5b128b51-ea49-44d8-9540-92ba21741f37",
      "name": "ci",
      "price": 659644306633.5232,
    },
    Object {
      "id": "2c1cec63-d37c-4e48-bdbc-8744d0a6f706",
      "name": "fopcu",
      "price": 399917433697.0752,
    },
  ],
  "User": Array [
    Object {
      "email": "ju",
      "house": null,
      "id": "e13d34ca-0872-5019-9469-fb4d3a0f816e",
      "isActive": true,
      "name": "sezsi",
      "pet": Object {
        "animal": "Dog",
        "birthday": 2019-10-10T18:26:07.269Z,
        "id": 1,
        "name": "gafgohrak",
      },
    },
    Object {
      "email": "junla",
      "house": null,
      "id": "a0171dea-a8d6-5667-94b9-f5b98842fbbf",
      "isActive": false,
      "name": "kos",
      "pet": Object {
        "animal": "Dog",
        "birthday": 2019-10-10T18:26:07.269Z,
        "id": 2,
        "name": "mabuj",
      },
    },
    Object {
      "email": "jocnuf",
      "house": null,
      "id": "8763d7e2-a361-5ba2-ada9-52f4369cd413",
      "isActive": true,
      "name": "husefuw",
      "pet": Object {
        "animal": "Cat",
        "birthday": 2019-10-10T18:26:07.269Z,
        "id": 3,
        "name": "taj",
      },
    },
    Object {
      "email": "wijug",
      "house": null,
      "id": "993f7b9f-f9be-5d51-a8f8-eac3312d6bef",
      "isActive": false,
      "name": "fef",
      "pet": Object {
        "animal": "Dog",
        "birthday": 2019-10-10T18:26:07.269Z,
        "id": 4,
        "name": "cuval",
      },
    },
    Object {
      "email": "liptemdov",
      "house": null,
      "id": "e626ece0-ae40-531a-aef9-5d5c32203d45",
      "isActive": true,
      "name": "leg",
      "pet": Object {
        "animal": "Dog",
        "birthday": 2019-10-10T18:26:07.269Z,
        "id": 5,
        "name": "unukaho",
      },
    },
  ],
}
`;

exports[`seed: correctly seeds data 2`] = `
Array [
  Array [
    Object {
      "address": "irevaumi",
      "id": "3c6a84f5-da63-57df-8bc0-611398c5f6bd",
      "numberOfRooms": 127348283,
      "residents": Array [
        Object {
          "email": "ju",
          "id": "e13d34ca-0872-5019-9469-fb4d3a0f816e",
          "isActive": true,
          "name": "sezsi",
        },
      ],
    },
    Object {
      "address": "lavub",
      "id": "d0b09399-5dfe-5f66-9989-17958b9c7954",
      "numberOfRooms": -928052335,
      "residents": Array [],
    },
    Object {
      "address": "uze",
      "id": "e326250d-c6ad-52fc-8f56-865e43b3f5ee",
      "numberOfRooms": -56942030,
      "residents": Array [
        Object {
          "email": "junla",
          "id": "a0171dea-a8d6-5667-94b9-f5b98842fbbf",
          "isActive": false,
          "name": "kos",
        },
        Object {
          "email": "jocnuf",
          "id": "8763d7e2-a361-5ba2-ada9-52f4369cd413",
          "isActive": true,
          "name": "husefuw",
        },
        Object {
          "email": "wijug",
          "id": "993f7b9f-f9be-5d51-a8f8-eac3312d6bef",
          "isActive": false,
          "name": "fef",
        },
      ],
    },
  ],
  Array [
    Object {
      "animal": "Dog",
      "birthday": 2019-10-10T18:26:07.269Z,
      "id": 1,
      "name": "gafgohrak",
      "toys": Array [],
      "users": Array [
        Object {
          "email": "ju",
          "id": "e13d34ca-0872-5019-9469-fb4d3a0f816e",
          "isActive": true,
          "name": "sezsi",
        },
      ],
    },
    Object {
      "animal": "Dog",
      "birthday": 2019-10-10T18:26:07.269Z,
      "id": 2,
      "name": "mabuj",
      "toys": Array [],
      "users": Array [
        Object {
          "email": "junla",
          "id": "a0171dea-a8d6-5667-94b9-f5b98842fbbf",
          "isActive": false,
          "name": "kos",
        },
      ],
    },
    Object {
      "animal": "Cat",
      "birthday": 2019-10-10T18:26:07.269Z,
      "id": 3,
      "name": "taj",
      "toys": Array [],
      "users": Array [
        Object {
          "email": "jocnuf",
          "id": "8763d7e2-a361-5ba2-ada9-52f4369cd413",
          "isActive": true,
          "name": "husefuw",
        },
      ],
    },
    Object {
      "animal": "Dog",
      "birthday": 2019-10-10T18:26:07.269Z,
      "id": 4,
      "name": "cuval",
      "toys": Array [],
      "users": Array [
        Object {
          "email": "wijug",
          "id": "993f7b9f-f9be-5d51-a8f8-eac3312d6bef",
          "isActive": false,
          "name": "fef",
        },
      ],
    },
    Object {
      "animal": "Dog",
      "birthday": 2019-10-10T18:26:07.269Z,
      "id": 5,
      "name": "unukaho",
      "toys": Array [],
      "users": Array [
        Object {
          "email": "liptemdov",
          "id": "e626ece0-ae40-531a-aef9-5d5c32203d45",
          "isActive": true,
          "name": "leg",
        },
      ],
    },
    Object {
      "animal": "Cat",
      "birthday": 2019-10-10T18:26:07.269Z,
      "id": 6,
      "name": "tibawha",
      "toys": Array [],
      "users": Array [],
    },
  ],
  Array [
    Object {
      "id": "a1e86c42-d617-4de9-bae3-d1cd4790c659",
      "name": "ofosid",
      "pet": null,
      "price": -97579029233.664,
    },
    Object {
      "id": "5b128b51-ea49-44d8-9540-92ba21741f37",
      "name": "ci",
      "pet": null,
      "price": 659644306633.5232,
    },
    Object {
      "id": "2c1cec63-d37c-4e48-bdbc-8744d0a6f706",
      "name": "fopcu",
      "pet": null,
      "price": 399917433697.0752,
    },
  ],
  Array [
    Object {
      "email": "ju",
      "house": Object {
        "address": "irevaumi",
        "id": "3c6a84f5-da63-57df-8bc0-611398c5f6bd",
        "numberOfRooms": 127348283,
      },
      "id": "e13d34ca-0872-5019-9469-fb4d3a0f816e",
      "isActive": true,
      "name": "sezsi",
      "pet": Object {
        "animal": "Dog",
        "birthday": 2019-10-10T18:26:07.269Z,
        "id": 1,
        "name": "gafgohrak",
      },
    },
    Object {
      "email": "junla",
      "house": Object {
        "address": "uze",
        "id": "e326250d-c6ad-52fc-8f56-865e43b3f5ee",
        "numberOfRooms": -56942030,
      },
      "id": "a0171dea-a8d6-5667-94b9-f5b98842fbbf",
      "isActive": false,
      "name": "kos",
      "pet": Object {
        "animal": "Dog",
        "birthday": 2019-10-10T18:26:07.269Z,
        "id": 2,
        "name": "mabuj",
      },
    },
    Object {
      "email": "jocnuf",
      "house": Object {
        "address": "uze",
        "id": "e326250d-c6ad-52fc-8f56-865e43b3f5ee",
        "numberOfRooms": -56942030,
      },
      "id": "8763d7e2-a361-5ba2-ada9-52f4369cd413",
      "isActive": true,
      "name": "husefuw",
      "pet": Object {
        "animal": "Cat",
        "birthday": 2019-10-10T18:26:07.269Z,
        "id": 3,
        "name": "taj",
      },
    },
    Object {
      "email": "wijug",
      "house": Object {
        "address": "uze",
        "id": "e326250d-c6ad-52fc-8f56-865e43b3f5ee",
        "numberOfRooms": -56942030,
      },
      "id": "993f7b9f-f9be-5d51-a8f8-eac3312d6bef",
      "isActive": false,
      "name": "fef",
      "pet": Object {
        "animal": "Dog",
        "birthday": 2019-10-10T18:26:07.269Z,
        "id": 4,
        "name": "cuval",
      },
    },
    Object {
      "email": "liptemdov",
      "house": null,
      "id": "e626ece0-ae40-531a-aef9-5d5c32203d45",
      "isActive": true,
      "name": "leg",
      "pet": Object {
        "animal": "Dog",
        "birthday": 2019-10-10T18:26:07.269Z,
        "id": 5,
        "name": "unukaho",
      },
    },
  ],
]
`;
